tools/cclass_stubs.h

void free(void *p);
typedef int64_t off_t;
struct interval {
	int first;
	int last;
};
struct First {
	short entry[TOPSIZE];
};
struct Mid {
	short entry[SECONDSIZE];
};
struct Level {
	int alloc;
	int size;
	union {
		struct Mid *b;
		struct Mid *c;
		struct Leaf *d;
		struct Ileaf *e;
	} table;
};
struct Rset {
	struct First top;
	struct Level second;
	struct Mid mid;
	struct Level third;
};
struct Rtree {
	struct First top;
	struct Level second;
	struct Mid mid;
	struct Level third;
	struct Level leaf;
};
struct Cclass {
	ptrdiff_t size;
	ptrdiff_t len;
	struct interval *intervals;
	struct Rset rset[1];
};
/* Minimal charmap — cclass_remap only reads type + calls from_uni */
struct charmap {
	struct charmap *next;
	const char *name;
	int type;
};