src/regex.zig

//! Regular expression engine — replaces `joe/regex.c`.
//!
//! Faithful C-ABI port of JOE's NFA regex compiler/matcher.
//! Generated from a goto-free rewrite of regex.c via `zig translate-c`,
//! then cleaned for the hybrid Zig+C build.

const std = @import("std");
const ptrdiff_t = c_long;
const off_t = i64;
const FOLDMAGIC: c_int = 0x4000000;
const NO_MORE_DATA: c_int = -256;
const MAX_MATCHES: c_int = 10;
const MAX_THREADS: c_int = 50;
const STACK_SIZE: c_int = 8;

pub const struct_interval = extern struct {
    first: c_int = 0,
    last: c_int = 0,
};
const union_unnamed_3 = extern union {
    b: ?*anyopaque,
    c: ?*anyopaque,
    d: ?*anyopaque,
    e: ?*anyopaque,
};
pub const struct_Level = extern struct {
    alloc: c_int = 0,
    size: c_int = 0,
    table: union_unnamed_3 = @import("std").mem.zeroes(union_unnamed_3),
};
pub const struct_Rset = extern struct {
    top: [68]c_short = @import("std").mem.zeroes([68]c_short),
    second: struct_Level = @import("std").mem.zeroes(struct_Level),
    mid: [32]c_short = @import("std").mem.zeroes([32]c_short),
    third: struct_Level = @import("std").mem.zeroes(struct_Level),
};
pub const struct_Cclass = extern struct {
    size: ptrdiff_t = 0,
    len: ptrdiff_t = 0,
    intervals: [*c]struct_interval = null,
    rset: [1]struct_Rset = @import("std").mem.zeroes([1]struct_Rset),
};
pub const Cclass = struct_Cclass;
pub const struct_charmap = extern struct {
    next: [*c]struct_charmap = null,
    name: [*c]const u8 = null,
    @"type": c_int = 0,
    is_punct: ?*const fn ([*c]struct_charmap, c_int) callconv(.c) c_int = null,
    is_print: ?*const fn ([*c]struct_charmap, c_int) callconv(.c) c_int = null,
    is_space: ?*const fn ([*c]struct_charmap, c_int) callconv(.c) c_int = null,
    is_alpha_: ?*const fn ([*c]struct_charmap, c_int) callconv(.c) c_int = null,
    is_alnum_: ?*const fn ([*c]struct_charmap, c_int) callconv(.c) c_int = null,
    to_lower: ?*const fn ([*c]struct_charmap, c_int) callconv(.c) c_int = null,
    to_upper: ?*const fn ([*c]struct_charmap, c_int) callconv(.c) c_int = null,
};
pub const charmap = struct_charmap;
pub const struct_Frag = extern struct {
    start: [*c]u8 = null,
    len: ptrdiff_t = 0,
    size: ptrdiff_t = 0,
    @"align": ptrdiff_t = 0,
};
pub const Frag = struct_Frag;
const P = @import("gapbuffer/types.zig").P;
pub const struct_Rtree = extern struct {
    top: [68]c_short = @import("std").mem.zeroes([68]c_short),
    second: struct_Level = @import("std").mem.zeroes(struct_Level),
    mid: [32]c_short = @import("std").mem.zeroes([32]c_short),
    third: struct_Level = @import("std").mem.zeroes(struct_Level),
    leaf: struct_Level = @import("std").mem.zeroes(struct_Level),
};
pub const Rtree = struct_Rtree;
pub const interval = struct_interval;
pub const struct_regmatch = extern struct {
    rm_so: off_t = 0,
    rm_eo: off_t = 0,
};
pub const Regmatch_t = struct_regmatch;
pub const iDOT: c_int = -512;
pub const iEXPR: c_int = -511;
pub const iBOL: c_int = -510;
pub const iEOL: c_int = -509;
pub const iBOW: c_int = -508;
pub const iEOW: c_int = -507;
pub const iBRA: c_int = -506;
pub const iKET: c_int = -505;
pub const iFORK: c_int = -504;
pub const iJUMP: c_int = -503;
pub const iCLASS: c_int = -502;
pub const iEND: c_int = -501;
const enum_unnamed_4 = c_int;
pub const struct_node = extern struct {
    @"type": c_int = 0,
    r: c_int = 0,
    l: c_int = 0,
    cclass: [1]struct_Cclass = @import("std").mem.zeroes([1]struct_Cclass),
};
pub const struct_regcomp = extern struct {
    ptr: [*c]const u8 = null,
    l: ptrdiff_t = 0,
    cmap: [*c]struct_charmap = null,
    nodes: [*c]struct_node = null,
    len: c_int = 0,
    size: c_int = 0,
    prefix: [*c]u8 = null,
    prefix_len: ptrdiff_t = 0,
    prefix_size: ptrdiff_t = 0,
    bra_no: c_int = 0,
    frag: [1]Frag = @import("std").mem.zeroes([1]Frag),
    err: [*c]const u8 = null,
};

comptime {
    if (@sizeOf(struct_Cclass) != 256) @compileError("Cclass size mismatch");
    if (@sizeOf(struct_node) != 272) @compileError("node size mismatch");
    if (@sizeOf(struct_regcomp) != 112) @compileError("regcomp size mismatch");
    if (@sizeOf(Frag) != 32) @compileError("Frag size mismatch");
    if (@sizeOf(Regmatch_t) != 16) @compileError("Regmatch size mismatch");
    if (@sizeOf(P) != 112) @compileError("P size mismatch");
}
